# flow_matching_visualization

./: .gitignore  FIX.md  PLAN.md  README.md  STEP2.md  TESTS.md  pyproject.toml
src/: __init__.py  app.py  distributions.py  flow_matching.py  interactive_viz.py  lecture_content.py  lecture_viz.py  math_panel.py  mlp.py  solver.py  visualization.py
tests/: __init__.py  test_distributions.py  test_flow_matching.py  test_mlp.py  test_solver.py
