[project]
name = "flow-matching-visualization"
version = "0.1.0"
description = "Interactive 1D Conditional Flow Matching Visualization"
readme = "PLAN.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchdiffeq>=0.2.0",
    "streamlit>=1.30.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
